--- a/.env.example
+++ b/.env.example
@@ -5,15 +5,21 @@ APP_DEBUG=true
 APP_URL=http://localhost
 APP_TIMEZONE=UTC
 
-LOG_CHANNEL=stack
-LOG_SLACK_WEBHOOK_URL=
-
+# MySQL
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=homestead
 DB_USERNAME=homestead
 DB_PASSWORD=secret
+DB_CHARSET=utf8mb4
+DB_COLLATION=utf8mb4_unicode_ci
 
-CACHE_DRIVER=file
-QUEUE_CONNECTION=sync
+# Redis
+CACHE_REDIS_CONNECTION=default
+REDIS_CLIENT=phpredis
+REDIS_HOST=127.0.0.1
+REDIS_PORT=6379
+REDIS_PASSWORD=secret
+REDIS_DB=0
+REDIS_PREFIX=REDIS_PREFIX:
