--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,12 @@
 {
-    "name": "laravel/lumen",
-    "description": "The Laravel Lumen Framework.",
-    "keywords": ["framework", "laravel", "lumen"],
-    "license": "MIT",
+    "name": "cornyk/lumen-template",
     "type": "project",
+    "description": "The Laravel Lumen Framework.",
     "require": {
         "php": "^8.1",
+        "ext-pdo": "*",
+        "guzzlehttp/guzzle": "^7.9",
+        "illuminate/redis": "^10.48",
         "laravel/lumen-framework": "^10.0"
     },
     "require-dev": {
@@ -15,9 +16,7 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\": "app/",
-            "Database\\Factories\\": "database/factories/",
-            "Database\\Seeders\\": "database/seeders/"
+            "App\\": "app/"
         }
     },
     "autoload-dev": {
